force-app/main/default/objects/Guides_Setting__mdt/fields/Community_Template__c.field-meta.xml
<CustomField>
    <fullName>Community_Template__c</fullName>
    <label>Community Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>