force-app/main/default/objects/Guides_Setting__mdt/fields/HCP_Quick_Reference__c.field-meta.xml
<CustomField>
    <fullName>HCP_Quick_Reference__c</fullName>
    <label>HCP Quick Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>