force-app/main/default/objects/Guides_Setting__mdt/fields/HCP_User_Manual__c.field-meta.xml
<CustomField>
    <fullName>HCP_User_Manual__c</fullName>
    <label>HCP User Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>