force-app/main/default/objects/Guides_Setting__mdt/fields/Participant_Quick_Reference__c.field-meta.xml
<CustomField>
    <fullName>Participant_Quick_Reference__c</fullName>
    <label>Participant Quick Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>