force-app/main/default/objects/Guides_Setting__mdt/fields/Participant_Quick_Reference_GSK__c.field-meta.xml
<CustomField>
    <fullName>Participant_Quick_Reference_GSK__c</fullName>
    <description>GSK quick reference guide</description>
    <label>Participant Quick Reference	GSK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>