force-app/main/default/objects/Guides_Setting__mdt/fields/Participant_User_Manual__c.field-meta.xml
<CustomField>
    <fullName>Participant_User_Manual__c</fullName>
    <label>Participant User Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>