force-app/main/default/objects/Guides_Setting__mdt/fields/Participant_Video_Guide__c.field-meta.xml
<CustomField>
    <fullName>Participant_Video_Guide__c</fullName>
    <label>Participant Video Guide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>