force-app/main/default/objects/Guides_Setting__mdt/fields/PI_Quick_Reference__c.field-meta.xml
<CustomField>
    <fullName>PI_Quick_Reference__c</fullName>
    <label>PI Quick Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>