force-app/main/default/objects/Guides_Setting__mdt/fields/PI_User_Manual__c.field-meta.xml
<CustomField>
    <fullName>PI_User_Manual__c</fullName>
    <label>PI User Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>